<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--用户手机号-->
    <LinearLayout
        android:id="@+id/linear_layout_signin_user_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_layout_signin_user_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ti_edit_text_signin_user_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_user_tel"
                android:inputType="phone"
                android:maxLength="11"
                android:textColorHint="@color/grey500"/>

        </android.support.design.widget.TextInputLayout>

        <!--获取验证码按钮-->
        <Button
            android:id="@+id/button_signin_get_validate_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/signin_get_validate_code"
            android:textColor="@color/grey200"
            android:background="@color/blue500"/>

    </LinearLayout>

    <!--验证码-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_layout_signin_validate_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_signin_user_tel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_edit_text_signin_validate_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_validate_code"
            android:inputType="number"
            android:textColorHint="@color/grey500"/>

    </android.support.design.widget.TextInputLayout>

    <!--用户名-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_layout_signin_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_layout_signin_validate_code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_edit_text_signin_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_user_name"
            android:inputType="text"
            android:textColorHint="@color/grey500"/>

    </android.support.design.widget.TextInputLayout>

    <!--登录密码-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_layout_signin_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_layout_signin_user_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_edit_text_signin_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_user_password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey500"/>

    </android.support.design.widget.TextInputLayout>

    <!--重新输入登录密码-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_layout_signin_user_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_layout_signin_user_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ti_edit_text_signin_user_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_user_password_check"
            android:inputType="textPassword"
            android:textColorHint="@color/grey500"/>

    </android.support.design.widget.TextInputLayout>

    <!--注册按钮-->
    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_layout_signin_user_password_check"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/blue500"
        android:text="@string/common_button_signin"/>

</RelativeLayout>